<resources>
    <string name="label">MVP with Firebase</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet hendrerit odio. Duis non mi sapien. Pellentesque sit amet viverra magna. Nunc sagittis interdum lacinia. Phasellus mollis, ex vel dignissim convallis, dolor lacus imperdiet purus, vitae consectetur erat metus sed neque. In feugiat vehicula erat. Phasellus eu odio vel erat vestibulum pretium aliquam id ipsum. Aliquam erat volutpat. Praesent lorem metus, pretium ac egestas eu, suscipit eu tortor. Phasellus eget erat non tortor bibendum pulvinar. Phasellus et molestie ex.Donec eget mauris nec risus rutrum posuere ac sit amet lacus. Pellentesque tellus urna, sagittis ut ante et, ullamcorper volutpat ex. Cras ultricies risus dui, eu suscipit nulla feugiat ut. Quisque molestie lacus ante, pellentesque egestas urna sagittis nec. Morbi tempus id nibh a dignissim. Proin interdum nibh bibendum viverra varius. Proin porta dolor interdum, porta sapien eu, gravida eros. Etiam lobortis laoreet diam. Etiam non orci tincidunt, congue urna a, fringilla mauris. Duis feugiat eros sed ante fringilla, sed aliquam est mollis. Donec finibus pellentesque nisi sed dictum. Vestibulum venenatis semper neque at vulputate.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus nunc id pretium varius. Donec vel sapien at arcu facilisis venenatis. Pellentesque consequat quis neque et fringilla. Vestibulum viverra laoreet neque ut hendrerit. Mauris eu iaculis purus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris faucibus tortor vehicula, porttitor neque sit amet, mattis nisi. Donec sit amet felis consectetur, rutrum dolor eu, suscipit ante.Phasellus mattis volutpat fringilla. Ut feugiat magna leo, finibus lacinia felis aliquet ac. Etiam gravida ornare facilisis. Ut porta eget nisl a bibendum. Sed non enim arcu. Quisque ornare odio turpis, at tempus arcu suscipit non. Praesent sed vehicula turpis, vitae molestie nibh. Vivamus vestibulum vitae lectus vitae convallis. Ut hendrerit sagittis risus non accumsan. Fusce eget augue luctus, sodales justo vitae, lobortis massa. Aenean sit amet ornare sem. Duis imperdiet tellus at suscipit placerat.Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum non eros euismod, pretium ex eu, vestibulum dui. Maecenas magna velit, rhoncus ut pretium tempus, faucibus nec nisi. Vestibulum sed velit nisl. Maecenas ultrices mi ut nulla venenatis eleifend. Donec tempus facilisis diam, non scelerisque velit efficitur ut. Phasellus dapibus, est non gravida aliquet, mi erat ultricies mi, non interdum dolor metus vel est. Nulla luctus lobortis tellus at laoreet. Nullam a massa risus. Mauris tempus neque justo, sed aliquam turpis imperdiet ut. Sed ut erat risus. Fusce cursus porttitor justo, sit amet scelerisque tellus fermentum at. Mauris libero urna, vestibulum id neque eget, semper tempus turpis. </string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="learn">Poznaj</string>
    <string name="plan">Planuj</string>
    <string name="work">Działaj</string>
    <string name="error_msg">App wasn\'t able to retrieve data.</string>
    <string name="network_failure_msg">App wasn\'t able to connect to the internet.</string>
    <string name="image">image</string>
    <string name="description_label">Description</string>
    <string name="filter_view_mvp_app">MVPWithFirebase</string>
    <string name="card_headline">Brunch this weekend?</string>
    <string name="articles_count_label">Read articles</string>
    <string name="github_title">Github</string>
</resources>
