<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_learn"
        android:enabled="true"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/learn"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_plan"
        android:enabled="true"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/plan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_do"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/work"
        app:showAsAction="ifRoom" />


</menu>