<?xml version="1.0" encoding="utf-8"?>
<!-- Updated Card Fragment https://material.io/develop/android/components/material-card-view/ -->
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    app:cardElevation="@dimen/card_elevation"
    android:minHeight="200dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/topic_image"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerCrop"
                android:src="@drawable/example_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin"
                android:layout_marginTop="@dimen/component_margin"
                android:text="@string/card_headline"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/card_headline_text_size"
                android:textStyle="bold"
                app:fontFamily="@font/work_sans_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topic_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topic_read_articles_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin"
                android:layout_marginTop="@dimen/component_margin"
                android:textColor="@color/textColorSecondary"
                android:textStyle="bold"
                android:text="@string/articles_count_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topic_name" />

            <com.carlosmuvi.segmentedprogressbar.SegmentedProgressBar
                android:id="@+id/topic_read_articles"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginStart="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin"
                android:layout_marginTop="@dimen/component_margin"
                android:layout_marginEnd="@dimen/component_margin"
                android:layout_marginRight="@dimen/component_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topic_read_articles_label"
                app:fill_color="@color/colorAccent"
                app:gap_size="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/component_margin"
                android:layout_marginStart="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin"
                android:text="@string/description_label"
                android:textColor="@color/textColorSecondary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topic_read_articles" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/topic_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin"
                android:layout_marginTop="@dimen/component_margin"
                android:layout_marginEnd="@dimen/component_margin"
                android:layout_marginRight="@dimen/component_margin"
                android:layout_marginBottom="24dp"
                android:maxLines="6"
                android:text="@string/lorem_short"
                android:textSize="@dimen/body_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
